The Classifier and the model has been registered to snowflake

--- a/Bert-Classifier.ipynb
+++ b/Bert-Classifier.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "72a99614-5882-4624-80ea-7301348ed54a",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "e6e6cc4f-6af7-47df-a5b3-eea24510ddce",
    "metadata": {},
    "outputs": [
@@ -60,6 +60,7 @@
     }
    ],
    "source": [
+    "\n",
     "model_path  =  \"google-bert/bert-base-uncased\"\n",
     "\n",
     "tokenizer =  AutoTokenizer.from_pretrained(model_path)\n",
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "8ce005e9-158b-46b3-8813-bff7c20d9c52",
    "metadata": {},
    "outputs": [
@@ -192,14 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "d100a4f2-61ad-4348-be0b-7915731d6558",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76acd403e86b49e099ec38fad9b72940",
+       "model_id": "bb28fa0f954842cabbf0e7c0431c548e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -213,7 +214,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e60a2cffb6414ab7b9ebba67718f05b2",
+       "model_id": "feaffed08697465588c9dbd56307f058",
        "version_major": 2,
        "version_minor": 0
       },
@@ -227,7 +228,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a092d17d995452898f695a3a13a8120",
+       "model_id": "9898820cd2b443b5bce2b985b191eda8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -266,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "5514229e-b6a4-49c2-99a7-c156e438f83f",
    "metadata": {},
    "outputs": [],
@@ -304,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "fbb4c451-9a47-48b5-a898-9d08d46bc479",
    "metadata": {},
    "outputs": [],
@@ -330,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "9765dbde-de1e-497d-b303-bfb2ad1ac5fd",
    "metadata": {},
    "outputs": [
@@ -338,7 +339,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\azar-test\\AppData\\Local\\Temp\\2\\ipykernel_4284\\2732273287.py:1: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "C:\\Users\\azar-test\\AppData\\Local\\Temp\\2\\ipykernel_6596\\2732273287.py:1: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
       "  trainer = Trainer(\n"
      ]
     },
@@ -349,7 +350,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='130' max='130' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [130/130 00:37, Epoch 10/10]\n",
+       "      [130/130 00:40, Epoch 10/10]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -364,71 +365,71 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>0.634500</td>\n",
-       "      <td>0.399482</td>\n",
+       "      <td>0.649800</td>\n",
+       "      <td>0.389397</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
-       "      <td>0.408200</td>\n",
-       "      <td>0.311390</td>\n",
-       "      <td>0.955000</td>\n",
+       "      <td>0.404900</td>\n",
+       "      <td>0.310827</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
-       "      <td>0.288100</td>\n",
-       "      <td>0.143987</td>\n",
+       "      <td>0.277800</td>\n",
+       "      <td>0.142245</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>0.183100</td>\n",
-       "      <td>0.097963</td>\n",
+       "      <td>0.182500</td>\n",
+       "      <td>0.097272</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>0.129000</td>\n",
-       "      <td>0.051761</td>\n",
+       "      <td>0.138400</td>\n",
+       "      <td>0.050333</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
-       "      <td>0.088800</td>\n",
-       "      <td>0.038895</td>\n",
+       "      <td>0.091600</td>\n",
+       "      <td>0.038005</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
-       "      <td>0.075100</td>\n",
-       "      <td>0.027146</td>\n",
+       "      <td>0.072100</td>\n",
+       "      <td>0.027868</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
-       "      <td>0.048600</td>\n",
-       "      <td>0.026735</td>\n",
+       "      <td>0.049200</td>\n",
+       "      <td>0.026023</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9</td>\n",
-       "      <td>0.060700</td>\n",
-       "      <td>0.026764</td>\n",
+       "      <td>0.057500</td>\n",
+       "      <td>0.025553</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>10</td>\n",
-       "      <td>0.046500</td>\n",
-       "      <td>0.025126</td>\n",
+       "      <td>0.048400</td>\n",
+       "      <td>0.024219</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
@@ -445,10 +446,10 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=130, training_loss=0.19625076055526733, metrics={'train_runtime': 53.8688, 'train_samples_per_second': 18.564, 'train_steps_per_second': 2.413, 'total_flos': 7066998502560.0, 'train_loss': 0.19625076055526733, 'epoch': 10.0})"
+       "TrainOutput(global_step=130, training_loss=0.19722308012155387, metrics={'train_runtime': 58.4058, 'train_samples_per_second': 17.122, 'train_steps_per_second': 2.226, 'total_flos': 7066998502560.0, 'train_loss': 0.19722308012155387, 'epoch': 10.0})"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,14 +478,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "07c49c5e-2628-456d-9089-dbba4a42fff0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac7bb43eeb81475cb6f177a840f00fa0",
+       "model_id": "b1e30c4219c14ec88fefd4b0f046e00a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -552,6 +553,57 @@
     "for text, label in zip(test_texts, predicted_labels):\n",
     "    print(f\"Text: {text}\\nPredicted Label: {label}\\n\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e315760-f75e-4510-962f-5317dd4e7317",
+   "metadata": {},
+   "source": [
+    "### Step 8: After testing the model , now we can push this to Hugging face"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "150cec29-5be5-4b45-bd47-c13a8038f470",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d91447236c2046e1b89561229cee36fb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "model.safetensors:   0%|          | 0.00/438M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/Azar-J/question-classifier/commit/a9e840926e6ce1e5dbb17b0f246836ae6ddae5ed', commit_message='Upload BertForSequenceClassification', commit_description='', oid='a9e840926e6ce1e5dbb17b0f246836ae6ddae5ed', pr_url=None, repo_url=RepoUrl('https://huggingface.co/Azar-J/question-classifier', endpoint='https://huggingface.co', repo_type='model', repo_id='Azar-J/question-classifier'), pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.push_to_hub('Azar-J/question-classifier')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8bed059-d10d-4d09-a59f-b5547385f2e4",
+   "metadata": {},
+   "source": [
+    "### Now the Model has been pushed and now will be available for use and hosting them in Snowflake Model Registry"
    ]
   }
  ],
